# grisha

./: .gitignore  CLAUDE.md  Modelfile  README.md  USER_GUIDE.md  addquotes.py  config.yaml  grisha.sh  grisha.sh.save  grisha_api.py  grisha_ingestor.py  grisha_logging.py  grisha_query.py  karkas-server.sh  karkas-stop.sh  karkas.sh  reranker.py  titleswithquotes  wikiretrieval.py  wikititles
cpp/: CMakeLists.txt  README.md  pyproject.toml
cpp/include/: bm25_index.hpp  hybrid_search.hpp  mmap_storage.hpp  posting_list.hpp  tokenizer.hpp
cpp/src/: bindings.cpp  bm25_index.cpp  hybrid_search.cpp  mmap_storage.cpp  posting_list.cpp  tokenizer.cpp
karkas/: .dockerignore  .env.example  CLAUDE.md  CMakeLists.txt  DEVELOPMENT_PLAN.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  run_server.sh
karkas/client/: __init__.py  cli.py
karkas/docker/db-init/: 01-init.sql
karkas/docs/: USER_GUIDE.md
karkas/server/: __init__.py  config.py  exceptions.py  logging_config.py
karkas/server/api/: __init__.py  error_handlers.py  main.py
karkas/server/api/models/: __init__.py  game.py  orders.py  units.py
karkas/server/api/routes/: __init__.py  game.py  orders.py  persistence.py  scenarios.py  units.py
karkas/server/core/: game_state.cpp  json_serialization.hpp  orbat_manager.cpp  orbat_manager.hpp  perception_generator.cpp  python_bindings.cpp  simulation.cpp  simulation.hpp  turn_executor.cpp  types.hpp  unit.cpp  unit.hpp
karkas/server/core/combat/: combat_resolver.cpp  combat_resolver.hpp  engagement.cpp
karkas/server/core/logistics/: supply_model.cpp  supply_model.hpp
karkas/server/core/movement/: movement_resolver.cpp  movement_resolver.hpp  pathfinder.cpp
karkas/server/core/sensors/: detection.cpp  sensor_model.cpp  sensor_model.hpp
karkas/server/core/terrain/: los_calculator.cpp  mobility.cpp  terrain_engine.cpp  terrain_engine.hpp
karkas/server/database/: __init__.py  config.py  game_store.py  models.py  replay.py  session.py  turn_history.py
karkas/server/grisha/: __init__.py  advisor.py  commander.py  order_parser.py
karkas/tests/: CMakeLists.txt  README.md  test_api.py  test_database.py  test_error_handling.py  test_grisha.py  test_logging.py  test_order_parser.py
karkas/tests/integration/: __init__.py  conftest.py  test_bindings.py  test_game_flow.py  test_multi_turn.py
karkas/tests/server/: simple_test.cpp  test_combat.cpp  test_logistics.cpp  test_movement.cpp  test_orbat_manager.cpp  test_sensors.cpp  test_simulation.cpp  test_terrain.cpp  test_unit.cpp
karkas/tests/tools/: test_scenario_editor.py
karkas/tools/: __init__.py  db_admin.py  generate_fulda_terrain.py  generate_tutorial_terrain.py
karkas/tools/scenario_editor/: __init__.py  editor.py  interactive.py  main.py  models.py  templates.py  validators.py
karkas/tools/terrain_processor/: __init__.py  config.py  gpkg_writer.py  main.py  synthetic_generator.py  tiler.py
karkas/tools/terrain_processor/downloaders/: __init__.py  base.py  osm.py  srtm.py  worldcover.py
karkas/tools/terrain_processor/models/: __init__.py  region.py  terrain.py
karkas/tools/terrain_processor/processors/: __init__.py  base.py  elevation.py  landcover.py  roads.py  urban.py
karkas/tools/terrain_processor/utils/: __init__.py  geo.py
tests/: conftest.py  test_ingestor.py  test_query.py  test_reranker.py
tests/fixtures/: sample.jsonl  sample_config.yaml
