[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11>=2.10.0"]
build-backend = "scikit_build_core.build"

[project]
name = "grisha_bm25"
version = "0.1.0"
description = "BM25 Hybrid Search Module for Grisha RAG System"
readme = "README.md"
authors = [
    { name = "Grisha Project" }
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.scikit-build]
cmake.minimum-version = "3.15"
wheel.expand-macos-universal-tags = true
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"
